remove local media button

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                     <button type="submit" class="btn btn-primary mb-3" onclick="joinRoom()">Join Room</button>
                     <button type="submit" class="btn btn-success mb-3" onclick="joinRoomWithoutCamShareScreen()">Join
                         Room and Share screen directly</button>
-                    <button type="submit" class="btn btn-dark mb-3" onclick="joinRoomShareVideoAsStream()">Join
-                        Room and stream local media </button>
+                    <!--<button type="submit" class="btn btn-dark mb-3" onclick="joinRoomShareVideoAsStream()">Join
+                        Room and stream local media </button>-->
                 </div>
             </div>
             <div class="col-7 pt-5 ps-5 pe-5 col-sm-5">
