--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="dist/bootstrap.min.css" rel="stylesheet">
 
     <title>WebRTC PeerJs Demo</title>
 </head>
@@ -39,7 +38,7 @@
             </div>
             <div class="col-7 pt-5 ps-5 pe-5 col-sm-5">
                 <div class="alert alert-info alert-dismissible fade show mt-3" role="alert" id="notification" hidden>
-                    <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+                    <strong>Alert!</strong> You should check in on some of those fields below.
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
             </div>
@@ -98,24 +97,17 @@
                     </div>
                 </div>
                 <div class="row p-3">
-                    <video height="300" id="local-media" controls muted loop
-                        src="/media/video.mp4"></video>
+                    video not found
+                    <!--<video height="300" id="local-media" controls muted loop
+                        src="/media/video.mp4"></video>-->
                 </div>
             </div>
         </div>
 
     </div>
 
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-
-
-    <!-- check https://peerjs.com/ for latest CDN-->
-    <script src="https://unpkg.com/peerjs@1.4.7/dist/peerjs.min.js"></script>
+    <script src="dist/bootstrap.bundle.min.js"></script>
+    <script src="dist/peerjs.min.js"></script>
     <script src="script.js"></script>
 </body>
 
