change page title

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <!-- Bootstrap CSS -->
     <link href="dist/bootstrap.min.css" rel="stylesheet">
 
-    <title>WebRTC PeerJs Demo</title>
+    <title>Screen sharing using WebRTC and PeerJS</title>
 </head>
 
 <body>
     <!-- As a heading -->
     <nav class="navbar navbar-light bg-dark">
         <div class="container-fluid">
-            <span class="navbar-brand mb-0 h1" style="color: aliceblue;">WebRTC PeerJs Demo</span>
+            <span class="navbar-brand mb-0 h1" style="color: aliceblue;">Screen sharing using WebRTC and PeerJS</span>
         </div>
     </nav>
     <div class="container-fluid">
