--- a/index.html
+++ b/index.html
@@ -7,67 +7,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="dist/bootstrap.min.css" rel="stylesheet">
+    <link href="dist/w3.css" rel="stylesheet">
 
     <title>Screen sharing using WebRTC and PeerJS</title>
 </head>
 
 <body>
-    <!-- As a heading -->
-    <nav class="navbar navbar-light bg-dark">
-        <div class="container-fluid">
-            <span class="navbar-brand mb-0 h1" style="color: aliceblue;">Screen sharing using WebRTC and PeerJS</span>
-        </div>
-    </nav>
-    <div class="container-fluid">
+    <div class="w3-bar w3-black">
+        <a href="#" class="w3-bar-item w3-button">Screeh Sharing using WebRTC and PeerJS</a>
+      </div>
+    <div class="w3-container">
 
 
-        <div class="row">
-            <div class="col-5 pt-5 ps-5 col-sm-7">
-                <label class="form-label">Enter Room ID to connect or create</label>
-                <input id="room-input" type="text" class="form-control" placeholder="room ID">
+        <div class="w3-row">
+            <div class="w3-col w3-margin">
+                <label class="form-label">Join or create room</label>
+                <input id="room-input" type="text" class="form-control" placeholder="Room ID">
                 <br>
-                <div class="col-auto">
-                    <button type="submit" class="btn btn-secondary mb-3" onclick="createRoom()">Create Room</button>
-                    <button type="submit" class="btn btn-primary mb-3" onclick="joinRoom()">Join Room</button>
-                    <button type="submit" class="btn btn-success mb-3" onclick="joinRoomWithoutCamShareScreen()">Join
-                        Room and Share screen directly</button>
-                    <!--<button type="submit" class="btn btn-dark mb-3" onclick="joinRoomShareVideoAsStream()">Join
-                        Room and stream local media </button>-->
+                <div class="w3-col w3-margin">
+                    <button type="submit" class="w3-button w3-black" onclick="createRoom()">Create Room</button>
+                    <button type="submit" class="w3-button w3-green" onclick="joinRoom()">Join Room</button>
+                    <!--<button type="submit" class="w3-button w3-grey" onclick="joinRoomWithoutCamShareScreen()">Join
+                        Room (without webcam, auto screenshare)</button>-->
                 </div>
             </div>
-            <div class="col-7 pt-5 ps-5 pe-5 col-sm-5">
-                <div class="alert alert-info alert-dismissible fade show mt-3" role="alert" id="notification" hidden>
+            <div class="w3-col w3-margin">
+                <div class="w3-panel w3-blue" id="notification" hidden>
                     <strong>Alert!</strong> You should check in on some of those fields below.
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col ps-5 pt-5" id="local-vid-container" hidden>
-                <div class="row">
-                    <div class="col">
+        <div class="w3-row">
+            <div class="w3-col s5" id="local-vid-container" hidden>
+                <div class="w3-row">
+                    <div class="w3-col">
                         <h2>Local Stream</h2>
                     </div>
 
                 </div>
-                <div class="row p-3">
+                <div class="w3-row">
                     <video height="300" id="local-video" controls class="local-video"></video>
                 </div>
-                <div class="row">
-                    <div class="col-3 col-sm-12"><button type="submit" class="btn btn-success mb-3"
-                            onclick="startScreenShare()">Share Screen</button>
-                    </div>
+                <div class="w3-row">
+                    <div class="w3-col"><button type="submit" onclick="startScreenShare()">Share Screen</button></div>
                 </div>
             </div>
-            <div class="col ps-5 pt-5" id="screenshare-container" hidden>
-                <div class="row">
-                    <div class="col">
+            <div class="w3-col" id="screenshare-container" hidden>
+                <div class="w3-row">
+                    <div class="w3-col">
                         <h2>Screen Shared Stream</h2>
                     </div>
 
                 </div>
-                <div class="row p-3">
+                <div class="w3-row">
                     <video height="300" id="screenshared-video" controls class="local-video"></video>
                 </div>
                 <!-- <div class="row">
@@ -76,27 +68,27 @@
                     </div>
                 </div> -->
             </div>
-            <div class="col ps-5 pt-5" id="remote-vid-container" hidden>
-                <div class="row">
-                    <div class="col">
+            <div class="w3-col" id="remote-vid-container" hidden>
+                <div class="w3-row">
+                    <div class="w3-col">
                         <h2>Remote Stream</h2>
                     </div>
 
                 </div>
-                <div class="row p-3">
+                <div class="w3-row">
                     <video height="300" id="remote-video" controls class="remote-video"></video>
                 </div>
             </div>
 
-            <div class="col ps-5 pt-5" id="local-mdeia-container" hidden>
-                <div class="row">
+            <div class="w3-col" id="local-mdeia-container" hidden>
+                <div class="w3-row">
 
-                    <div class="col">
+                    <div class="w3-col">
                         <h2>Local video from media</h2>
                         <h6>On play stream to remote peer</h6>
                     </div>
                 </div>
-                <div class="row p-3">
+                <div class="w3-row">
                     video not found
                     <!--<video height="300" id="local-media" controls muted loop
                         src="/media/video.mp4"></video>-->
@@ -106,7 +98,6 @@
 
     </div>
 
-    <script src="dist/bootstrap.bundle.min.js"></script>
     <script src="dist/peerjs.min.js"></script>
     <script src="script.js"></script>
 </body>
